--- a/Ver-2/Hỏi Gpt.ipynb
+++ b/Ver-2/Hỏi Gpt.ipynb
@@ -345,6 +345,54 @@
     "kênh âm thanh có 2 âm thì có 2 zcr\n",
     "</details>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49ffe59a",
+   "metadata": {},
+   "source": [
+    "____"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17a889a2",
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "source": [
+    "# ask\n",
+    "\n",
+    "for i in range(0, self.listChromaMean.size()):\n",
+    "int' object is not callable\n",
+    "\n",
+    "đây là lỗi gì"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f5b7e4d",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "\n",
+    "Cách sửa\n",
+    "Nếu self.listChromaMean là list, sửa thành:\n",
+    "\n",
+    "```python\n",
+    "for i in range(0, len(self.listChromaMean)):\n",
+    "```\n",
+    "Nếu là NumPy array, sửa thành:\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "for i in range(0, self.listChromaMean.size):\n",
+    "```\n",
+    "Bạn có muốn gửi thêm đoạn code để mình giúp kiểm tra cụ thể hơn không?\n",
+    "</details>"
+   ]
   }
  ],
  "metadata": {
