upload file diagram

--- a/Ver-2/TinhKhoangCachMoiVector.ipynb
+++ b/Ver-2/TinhKhoangCachMoiVector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "43a047e0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "04aaacd8",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4f0eba7e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fca33110",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "94ea903b",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8b429acf",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "84c8dcc8",
    "metadata": {},
    "outputs": [],
@@ -83,129 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8951cac6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "duongDan",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "khoangCach",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "404cc3d3-a40c-4b5d-b7ef-a5c987f6d93f",
-       "rows": [
-        [
-         "112",
-         "..\\file-birdsong\\songs\\songs\\xc146757.flac",
-         "3.300173934220069"
-        ],
-        [
-         "99",
-         "..\\file-birdsong\\songs\\songs\\xc143894.flac",
-         "3.7621840393736563"
-        ],
-        [
-         "184",
-         "..\\file-birdsong\\songs\\songs\\xc59776.flac",
-         "4.186019388370101"
-        ],
-        [
-         "28",
-         "..\\file-birdsong\\songs\\songs\\xc116226.flac",
-         "4.232075456762792"
-        ],
-        [
-         "39",
-         "..\\file-birdsong\\songs\\songs\\xc121691.flac",
-         "4.35543003159296"
-        ]
-       ],
-       "shape": {
-        "columns": 2,
-        "rows": 5
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>duongDan</th>\n",
-       "      <th>khoangCach</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>..\\file-birdsong\\songs\\songs\\xc146757.flac</td>\n",
-       "      <td>3.300174</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>..\\file-birdsong\\songs\\songs\\xc143894.flac</td>\n",
-       "      <td>3.762184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184</th>\n",
-       "      <td>..\\file-birdsong\\songs\\songs\\xc59776.flac</td>\n",
-       "      <td>4.186019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>..\\file-birdsong\\songs\\songs\\xc116226.flac</td>\n",
-       "      <td>4.232075</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>..\\file-birdsong\\songs\\songs\\xc121691.flac</td>\n",
-       "      <td>4.355430</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                       duongDan  khoangCach\n",
-       "112  ..\\file-birdsong\\songs\\songs\\xc146757.flac    3.300174\n",
-       "99   ..\\file-birdsong\\songs\\songs\\xc143894.flac    3.762184\n",
-       "184   ..\\file-birdsong\\songs\\songs\\xc59776.flac    4.186019\n",
-       "28   ..\\file-birdsong\\songs\\songs\\xc116226.flac    4.232075\n",
-       "39   ..\\file-birdsong\\songs\\songs\\xc121691.flac    4.355430"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'dfKetQuaTruyVan' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdfKetQuaTruyVan\u001b[49m.head(\u001b[32m5\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'dfKetQuaTruyVan' is not defined"
+     ]
     }
    ],
    "source": [
@@ -214,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3035b773",
    "metadata": {},
    "outputs": [
